<resources>
    <string name="app_name">Main Account</string>
    <string name="receive_btn">Receive</string>
    <string name="send_btn">Send</string>
    <string name="curr_balance">Current balance</string>
    <string name="amount">$25</string>
    <string name="btc_value">0.0347952 BTC</string>
    <string name="inbox_string">Inbox</string>
    <string name="starred_string">Starred</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="drafts_string">Drafts</string>
    <string name="allmail_string">All mail</string>
    <string name="trash_string">Trash</string>
    <string name="spam_string">Spam</string>
    <string name="openDrawer">Drawer open</string>
    <string name="closeDrawer">Drawer closed</string>
    <string name="action_settings">Settings</string>
    <string name="scan_adress">Scan Adress</string>
    <string name="recepient_adress">Recepient adress</string>
</resources>
