<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/toolbar"
    android:id="@+id/background_layout"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/violet"
            android:padding="17dp"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/currentBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="17dp"
                        android:text="@string/curr_balance"
                        android:textColor="@color/medium_violet"
                        android:textSize="11sp"
                        />

                    <TextView
                        android:id="@+id/ballance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="34dp"
                        android:text="@string/amount"
                        android:textColor="#fff"
                        android:textSize="35sp"
                        android:textStyle="bold"

                        />

                    <TextView
                        android:id="@+id/BTCvalue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="82dp"
                        android:text="@string/btc_value"
                        android:textColor="#fff"
                        android:textSize="10sp" />

                    <ImageView
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_gravity="right"
                        android:layout_marginTop="20dp"
                        android:src="@drawable/qrcode" />
                </FrameLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="50dp">
                    <Button
                        android:id="@+id/receive_button"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentRight="true"
                        android:layout_gravity="right"
                        android:layout_margin="2dp"
                        android:background="@drawable/rounded_button_corners"
                        android:text="@string/send_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        />

                    <Button
                        android:id="@+id/send_button"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_margin="2dp"
                        android:background="@drawable/rounded_button_corners"
                        android:onClick="displaySecondScreen"
                        android:text="@string/receive_btn"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="13sp"
                        />
                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:padding="17dp"
            >

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="200dp"
        >
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/items_listView"
            android:divider="@android:color/transparent"
            android:dividerHeight="20dp"
            android:padding="15dp"
            android:requiresFadingEdge="vertical"
            android:fadingEdgeLength="68dp"
            >
        </ListView>
    </LinearLayout>
</RelativeLayout>